		*** The logic surrounding when to shut down an AIO object is much cleaner.
		*** The ownership of messages and callback closures is much clearer.
		*** Things just look better in general.
		*** Several possible unsoundness issues were identified and fixed.
	** This opens up the possibility of new types of `Aio` objects, such as one that returns a `Future` or utilizes MPSC channels.

=== Deprecated ===

=== Removed ===

* The `nng-sys` crate has been moved to a new repository (#17).

=== Fixed ===

=== Security ===

//------------------------------------------------------------------------------
// Past Releases
//------------------------------------------------------------------------------

== [nng-rs v0.4.0] - 2019-01-27 ==

=== Added ===

* Sockets can now send messages asynchronously via `Socket::send_async`.
* Sockets can now receive messages asynchronously via `Socket::recv_async`.
* Sockets can now be cloned to have multiple handles to the same underlying NNG socket.
* `Socket::close` and `Context::close` have been added to match the style of Dialers, Pipes, and Listeners.
* Pipes and the pipe notify functionality has been implemented. (#14)

=== Changed ===

* The majority of types are now at the root of the crate rather than a module.
* Asynchronous sending on a context is now via `Context::send` rather than `Aio::send`.
* Asynchronous receiving on a context is now via `Context::recv` rather than `Aio::recv`.
* Dialers and listeners are now treated as handle values and do not close on drop.
* The PUBSUB example now publishes the number of subscribers rather than the time in order to show off the pipe notify functionality.

=== Fixed ===

* The `Push0` protocol now actually opens a `Push0` socket (instead of a `Pull0` socket).
* Asynchronous I/O callbacks no longer can enter the same callback closure simultaneously.
* `SocketAddr` now compiles on platforms where a `c_char` is unsigned. (#11)

== [nng-sys v0.1.3] - 2019-01-27 ==

=== Added ===
